[package]
name = "json-unflattening"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
authors = ["LINKS Foundation"]
description = "A Rust library for flattening and unflattening JSON structures."
repository = "https://github.com/Cybersecurity-LINKS/json-unflattening"


[dependencies]
serde = { version = "1.0.25", default_feature = false, features = ["derive", "serde_derive"] }
serde_json = {version = "1.0.59", features = ["preserve_order"]}
thiserror = "1.0.30"
regex = "1.10.2"


[lib]
name = "json_unflattening"
path = "src/lib.rs"
